--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -1,54 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view2"
-        android:layout_width="@dimen/_1dp"
+        android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/_30dp"
-        android:layout_marginTop="0dp"
-        android:background="@color/tab_enable"
-        app:layout_constraintBottom_toTopOf="@+id/image_cause"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_donate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="@dimen/_23dp"
-        android:background="@drawable/btn"
-        android:text="Donate"
-        android:textAllCaps="false"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toRightOf="@+id/view"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginTop="0dp"
+        android:background="@color/tab_enable"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_donate"
+        app:layout_constraintLeft_toLeftOf="@+id/image_user_cause"
+        app:layout_constraintRight_toRightOf="@+id/image_user_cause"
+        app:layout_constraintTop_toTopOf="@+id/image_user_cause" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_user_cause"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginStart="@dimen/_8dp"
-        android:layout_marginTop="0dp"
-        android:layout_weight="1"
+        android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/avatar_1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout10"
@@ -93,17 +72,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="@dimen/_1dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="@dimen/_30dp"
-        android:background="@color/tab_enable"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_user_cause" />
-
     <TextView
         android:id="@+id/cause__details"
         android:layout_width="0dp"
@@ -117,7 +85,7 @@
         android:textColor="@color/tab_enable"
         android:textSize="@dimen/_11sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/view"
+        app:layout_constraintLeft_toRightOf="@+id/view2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_cause" />
 
@@ -130,7 +98,7 @@
         android:layout_marginTop="@dimen/_8dp"
         android:orientation="horizontal"
         android:weightSum="2"
-        app:layout_constraintLeft_toRightOf="@+id/view"
+        app:layout_constraintLeft_toRightOf="@+id/view2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cause__details">
 
@@ -199,5 +167,24 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_donate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/_16dp"
+        android:background="@drawable/btn"
+        android:text="Donate"
+        android:textAllCaps="false"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/view2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
