--- a/app/src/main/res/layout/activity_show_details_user.xml
+++ b/app/src/main/res/layout/activity_show_details_user.xml
@@ -52,7 +52,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:background="@drawable/message2"
+        android:background="@drawable/message_outline_talk"
         app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
         app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintLeft_toRightOf="@+id/image_user_profile"
@@ -69,7 +69,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:background="@drawable/usernameimage"
+        android:background="@drawable/add_user"
         app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
         app:layout_constraintHorizontal_bias="0.725"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="268k My causes"
+        android:text="268k His causes"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -111,7 +111,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="192k Reviews"
+        android:text="Make Review"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
