3mlt el edit image profile

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,7 +62,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="268k My causes"
+        android:text="My causes"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -90,7 +90,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="192k Reviews"
+        android:text="Reviews"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -106,7 +106,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_16dp"
-        android:text="Name"
+        android:text=""
         android:textSize="@dimen/_20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
