--- a/app/src/main/res/layout/activity_show_details_user.xml
+++ b/app/src/main/res/layout/activity_show_details_user.xml
@@ -83,7 +83,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="268k His causes"
+        android:text="His causes"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
