3mlt package lel activities w 3mlt el db flow en mtkon4 fel kol fragment

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
-    tools:context="com.example.amr.sunbula.RegisterActivity">
+    tools:context="com.example.amr.sunbula.Activities.RegisterActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
