--- a/app/src/main/res/layout/activity_search_causes__people.xml
+++ b/app/src/main/res/layout/activity_search_causes__people.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.example.amr.sunbula.SearchCauses_People">
+    tools:context="com.example.amr.sunbula.Activities.SearchCauses_People">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
