--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
-    tools:context="com.example.amr.sunbula.ChangePasswordActivity">
+    tools:context="com.example.amr.sunbula.Activities.ChangePasswordActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
