--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.example.amr.sunbula.ChatActivity">
+    tools:context="com.example.amr.sunbula.Activities.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
