--- a/app/src/main/res/layout/activity_edit_cause.xml
+++ b/app/src/main/res/layout/activity_edit_cause.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amr.sunbula.EditCauseActivity">
+    tools:context="com.example.amr.sunbula.Activities.EditCauseActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
