--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.example.amr.sunbula.EditProfileActivity">
+    tools:context="com.example.amr.sunbula.Activities.EditProfileActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
