--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
-    tools:context="com.example.amr.sunbula.LoginActivity">
+    tools:context="com.example.amr.sunbula.Activities.LoginActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
