--- a/app/src/main/res/layout/content_edit_cause.xml
+++ b/app/src/main/res/layout/content_edit_cause.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgroundall"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.amr.sunbula.EditCauseActivity"
+    tools:context="com.example.amr.sunbula.Activities.EditCauseActivity"
     tools:showIn="@layout/activity_edit_cause">
 
     <android.support.constraint.ConstraintLayout
