--- a/app/src/main/res/menu/menu_search_causes.xml
+++ b/app/src/main/res/menu/menu_search_causes.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SearchCauses_People">
+    tools:context=".Activities.SearchCauses_People">
     <item
         android:id="@+id/action_search_causes"
         android:icon="@android:drawable/ic_menu_search"
