--- a/app/src/main/res/layout/content_edit_cause.xml
+++ b/app/src/main/res/layout/content_edit_cause.xml
@@ -35,6 +35,7 @@
             android:layout_marginTop="@dimen/_8dp"
             android:text="Upload image"
             android:textColor="#AAffffff"
+            android:textSize="@dimen/_12sp"
             app:layout_constraintBottom_toBottomOf="@+id/image_editcause"
             app:layout_constraintLeft_toLeftOf="@+id/image_editcause"
             app:layout_constraintRight_toRightOf="@+id/image_editcause"
@@ -57,6 +58,7 @@
             android:minLines="4"
             android:padding="@dimen/_8dp"
             android:scrollbars="vertical"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -73,16 +75,17 @@
             android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
             android:text="Description"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.025"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_editcause" />
 
         <ImageView
             android:id="@+id/image_name_editcause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_25dp"
+            android:layout_height="@dimen/_25dp"
             android:layout_marginLeft="@dimen/_16dp"
             android:layout_marginStart="@dimen/_16dp"
             android:layout_marginTop="@dimen/_16dp"
@@ -94,13 +97,14 @@
             android:id="@+id/name_editcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
-            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Name cause"
             android:inputType="textPersonName"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintLeft_toRightOf="@+id/image_name_editcause"
@@ -120,10 +124,10 @@
 
         <ImageView
             android:id="@+id/image_amount_editcause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="@dimen/_25dp"
+            android:layout_height="@dimen/_25dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v1"
             app:srcCompat="@drawable/amount" />
@@ -132,13 +136,14 @@
             android:id="@+id/amount_editcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
-            android:layout_marginStart="@dimen/_16dp"
-            android:layout_marginTop="@dimen/_20dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Amount"
             android:inputType="textPersonName"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/image_amount_editcause"
@@ -158,8 +163,8 @@
 
         <ImageView
             android:id="@+id/category_addcause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_25dp"
+            android:layout_height="@dimen/_25dp"
             android:layout_marginLeft="@dimen/_16dp"
             android:layout_marginStart="@dimen/_16dp"
             android:layout_marginTop="@dimen/_16dp"
@@ -171,7 +176,7 @@
             android:id="@+id/spinner_EditCategories"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_6dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
             android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintHorizontal_bias="0.0"
@@ -192,8 +197,8 @@
 
         <ImageView
             android:id="@+id/imageView_calendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_25dp"
+            android:layout_height="@dimen/_25dp"
             android:layout_marginLeft="@dimen/_16dp"
             android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -205,11 +210,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_20dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:hint="End date"
-            android:textSize="@dimen/_16sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
