--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -58,8 +58,8 @@
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -69,8 +69,8 @@
 
                 <ImageView
                     android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -80,8 +80,8 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -91,8 +91,8 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_8dp"
@@ -112,6 +112,7 @@
                     android:background="@null"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView2"
                     app:layout_constraintRight_toRightOf="parent"
@@ -139,6 +140,7 @@
                     android:background="@null"
                     android:hint="Confirm code"
                     android:inputType="text"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView3"
                     app:layout_constraintRight_toRightOf="parent"
@@ -167,6 +169,7 @@
                     android:background="@null"
                     android:hint="New password"
                     android:inputType="textPassword"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView4"
                     app:layout_constraintRight_toRightOf="parent"
@@ -193,6 +196,7 @@
                     android:background="@null"
                     android:hint="Confirm password"
                     android:inputType="textPassword"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView5"
