--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -51,7 +51,7 @@
             android:gravity="center"
             android:text="In order to continue. you must confirm your email address :"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_15sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -75,8 +75,8 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_8dp"
@@ -96,6 +96,7 @@
                     android:hint="Enter your confirm code"
                     android:inputType="text"
                     android:textStyle="bold"
+                    android:textSize="@dimen/_20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView6"
                     app:layout_constraintRight_toRightOf="parent"
