--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -43,8 +43,8 @@
 
             <ImageView
                 android:id="@+id/image_gendar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -53,8 +53,8 @@
 
             <ImageView
                 android:id="@+id/image_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -112,8 +112,8 @@
 
             <ImageView
                 android:id="@+id/image_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_8dp"
                 android:layout_marginStart="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
@@ -132,6 +132,7 @@
                 android:background="@null"
                 android:hint="Enter name"
                 android:inputType="textPersonName"
+                android:textSize="@dimen/_20sp"
                 android:textStyle="bold"
                 app:layout_constraintHorizontal_bias="0.181"
                 app:layout_constraintLeft_toRightOf="@+id/image_user"
@@ -152,8 +153,8 @@
 
             <ImageView
                 android:id="@+id/image_mail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_8dp"
                 android:layout_marginStart="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
@@ -172,6 +173,7 @@
                 android:background="@null"
                 android:hint="Enter email"
                 android:inputType="textEmailAddress"
+                android:textSize="@dimen/_20sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toRightOf="@+id/image_mail"
                 app:layout_constraintRight_toRightOf="parent"
@@ -191,8 +193,8 @@
 
             <ImageView
                 android:id="@+id/image_pin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_8dp"
                 android:layout_marginStart="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
@@ -211,6 +213,7 @@
                 android:background="@null"
                 android:hint="Country,Maintain its,Street"
                 android:inputType="textPersonName"
+                android:textSize="@dimen/_20sp"
                 android:textStyle="bold"
                 app:layout_constraintHorizontal_bias="0.181"
                 app:layout_constraintLeft_toRightOf="@+id/image_pin"
@@ -231,8 +234,8 @@
 
             <ImageView
                 android:id="@+id/image_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginLeft="@dimen/_16dp"
                 android:layout_marginStart="@dimen/_8dp"
                 android:layout_marginTop="@dimen/_16dp"
@@ -251,6 +254,7 @@
                 android:background="@null"
                 android:hint="Enter phone"
                 android:inputType="phone"
+                android:textSize="@dimen/_20sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toRightOf="@+id/image_phone"
                 app:layout_constraintRight_toRightOf="parent"
