--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,9 +56,9 @@
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
+                    android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view6"
@@ -66,10 +66,10 @@
 
                 <ImageView
                     android:id="@+id/imageView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_8dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/mail" />
@@ -78,12 +78,13 @@
                     android:id="@+id/txtemaillogin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginRight="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_8dp"
                     android:background="@null"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView7"
                     app:layout_constraintRight_toRightOf="parent"
@@ -103,11 +104,12 @@
                     android:id="@+id/txtpasswordlogin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginTop="16dp"
                     android:background="@null"
                     android:hint="Password"
                     android:inputType="textPassword"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView8"
                     app:layout_constraintTop_toBottomOf="@+id/view6" />
@@ -124,7 +126,7 @@
             android:layout_marginTop="@dimen/_8dp"
             android:text="Forget Passowrd"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_14sp"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/btn_login"
             app:layout_constraintRight_toRightOf="parent"
