--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -42,8 +42,8 @@
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -53,8 +53,8 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_16dp"
@@ -64,8 +64,8 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_8dp"
@@ -85,6 +85,7 @@
                     android:background="@null"
                     android:hint="Username"
                     android:inputType="textPersonName"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView2"
                     app:layout_constraintRight_toRightOf="parent"
@@ -112,6 +113,7 @@
                     android:background="@null"
                     android:hint="Password"
                     android:inputType="textPassword"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@+id/imageView3"
                     app:layout_constraintRight_toRightOf="parent"
@@ -138,6 +140,7 @@
                     android:background="@null"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView5"
@@ -187,6 +190,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:textSize="@dimen/_20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -203,6 +207,7 @@
             android:layout_marginTop="@dimen/_8dp"
             android:text="Upload image"
             android:textColor="#AAffffff"
+            android:textSize="@dimen/_12sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageregister"
             app:layout_constraintLeft_toLeftOf="@+id/imageregister"
             app:layout_constraintRight_toRightOf="@+id/imageregister"
