--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -50,7 +50,7 @@
             android:layout_marginTop="@dimen/_8dp"
             android:text="you can reset password."
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_15sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -74,8 +74,8 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_25dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginStart="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_8dp"
@@ -94,6 +94,7 @@
                     android:background="@null"
                     android:hint="Enter your email"
                     android:inputType="textEmailAddress"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView6"
