--- a/app/src/main/res/layout/activity_search_causes__people.xml
+++ b/app/src/main/res/layout/activity_search_causes__people.xml
@@ -32,6 +32,7 @@
                 android:layout_marginTop="@dimen/_8dp"
                 android:background="@null"
                 android:hint="Search..."
+                android:textSize="@dimen/_20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.031"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -40,8 +41,8 @@
 
             <ImageView
                 android:id="@+id/btn_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="@dimen/_25dp"
                 android:layout_marginBottom="@dimen/_8dp"
                 android:layout_marginEnd="@dimen/_8dp"
                 android:layout_marginRight="@dimen/_8dp"
@@ -95,6 +96,7 @@
                     android:text="Causes"
                     android:textAllCaps="false"
                     android:textColor="#ffffff"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold" />
 
                 <Button
@@ -106,6 +108,7 @@
                     android:text="People"
                     android:textAllCaps="false"
                     android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -122,7 +125,7 @@
         android:layout_marginTop="@dimen/_8dp"
         android:text="Recent search..."
         android:textColor="@color/colorAccent"
-        android:textSize="@dimen/_15sp"
+        android:textSize="@dimen/_20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />
@@ -130,17 +133,10 @@
     <ListView
         android:id="@+id/list_search_causes"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="@dimen/_8dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_recent_search"
-        app:layout_constraintVertical_bias="0.0">
-
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/text_recent_search" />
 </android.support.constraint.ConstraintLayout>
