--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="@dimen/_35dp"
-        android:layout_height="@dimen/_35dp"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="@dimen/_16dp"
         android:layout_marginLeft="@dimen/_16dp"
         android:layout_marginStart="@dimen/_16dp"
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/btn_send"
-        android:layout_width="@dimen/_35dp"
-        android:layout_height="@dimen/_35dp"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_16dp"
         android:layout_marginRight="@dimen/_16dp"
@@ -36,7 +36,7 @@
         android:id="@+id/txt_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_24dp"
+        android:layout_marginBottom="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -44,6 +44,7 @@
         android:background="@null"
         android:hint="Type here..."
         android:inputType="textPersonName"
+        android:textSize="@dimen/_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/imageView"
@@ -69,10 +70,10 @@
         android:id="@+id/list_chat"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toTopOf="@+id/view4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
