--- a/app/src/main/res/layout/item_in_bottom_hisprofile.xml
+++ b/app/src/main/res/layout/item_in_bottom_hisprofile.xml
@@ -21,9 +21,10 @@
 
     <ImageView
         android:id="@+id/image_ellipse_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_15dp"
+        android:layout_height="@dimen/_15dp"
         android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/ellipse_3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -63,7 +64,7 @@
     <ImageView
         android:id="@+id/image_switch"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_10dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -76,8 +77,8 @@
 
     <ImageView
         android:id="@+id/image_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_35dp"
+        android:layout_height="@dimen/_35dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
