--- a/app/src/main/res/layout/item_in_bottom_profile.xml
+++ b/app/src/main/res/layout/item_in_bottom_profile.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/tab_enable">
 
     <View
         android:id="@+id/view3"
@@ -21,9 +22,10 @@
 
     <ImageView
         android:id="@+id/image_ellipse_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_15dp"
+        android:layout_height="@dimen/_15dp"
         android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/ellipse_3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -63,7 +65,7 @@
     <ImageView
         android:id="@+id/image_switch"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_10dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -76,8 +78,8 @@
 
     <ImageView
         android:id="@+id/image_close1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -93,8 +95,8 @@
 
     <ImageView
         android:id="@+id/image_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -110,8 +112,8 @@
 
     <ImageView
         android:id="@+id/image_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_25dp"
+        android:layout_height="@dimen/_25dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -133,6 +135,7 @@
         android:layout_marginTop="@dimen/_8dp"
         android:text="Completed"
         android:textColor="#000000"
+        android:textSize="@dimen/_12sp"
         android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@+id/linearLayout10"
         app:layout_constraintRight_toRightOf="parent"
