--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -9,19 +9,6 @@
     tools:showIn="@layout/activity_chat">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/_25dp"
-        android:layout_height="@dimen/_25dp"
-        android:layout_marginBottom="@dimen/_16dp"
-        android:layout_marginLeft="@dimen/_16dp"
-        android:layout_marginStart="@dimen/_16dp"
-        android:background="@drawable/base"
-        android:padding="@dimen/_12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/plus" />
-
-    <ImageView
         android:id="@+id/btn_send"
         android:layout_width="@dimen/_25dp"
         android:layout_height="@dimen/_25dp"
@@ -38,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_8dp"
-        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:background="@null"
@@ -47,9 +34,8 @@
         android:textSize="@dimen/_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
         app:layout_constraintRight_toLeftOf="@+id/btn_send"
-        tools:layout_editor_absoluteX="64dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <View
         android:id="@+id/view4"
@@ -61,7 +47,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:background="@color/tab_enable"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/txt_message"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
