--- a/app/src/main/res/layout/item_in_messages.xml
+++ b/app/src/main/res/layout/item_in_messages.xml
@@ -17,6 +17,7 @@
         android:text="224"
         android:textSize="@dimen/_11sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintLeft_toRightOf="@+id/linearLayout6"
@@ -25,7 +26,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/message_user_pic"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_50dp"
         android:layout_height="@dimen/_50dp"
         android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_8dp"
