--- a/app/src/main/res/layout/item_in_notification.xml
+++ b/app/src/main/res/layout/item_in_notification.xml
@@ -35,7 +35,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/friends_pic"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/_50dp"
                 android:layout_height="@dimen/_50dp"
                 android:layout_marginBottom="@dimen/_8dp"
                 android:layout_marginLeft="@dimen/_8dp"
@@ -100,7 +100,7 @@
 
             <ImageView
                 android:id="@+id/image_pin"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/_25dp"
                 android:layout_height="@dimen/_50dp"
                 android:layout_marginBottom="@dimen/_8dp"
                 android:layout_marginLeft="@dimen/_10dp"
