--- a/app/src/main/res/layout/item_in_send_message.xml
+++ b/app/src/main/res/layout/item_in_send_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/sender_time"
+        android:id="@+id/recieve_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_8dp"
@@ -19,8 +19,8 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/message_sender_pic"
-        android:layout_width="0dp"
+        android:id="@+id/message_recieve_pic"
+        android:layout_width="@dimen/_50dp"
         android:layout_height="@dimen/_50dp"
         android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
@@ -45,11 +45,11 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/message_sender_pic"
+        app:layout_constraintRight_toLeftOf="@+id/message_recieve_pic"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/sender_message"
+            android:id="@+id/recieve_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/_8dp"
