--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -77,7 +77,7 @@
                 android:layout_width="@dimen/_120dp"
                 android:layout_height="@dimen/_120dp"
                 android:layout_marginTop="@dimen/_8dp"
-                android:src="@drawable/profile_pic"
+                android:src="@drawable/circle_shape"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
