--- a/app/src/main/res/layout/activity_show_details_user.xml
+++ b/app/src/main/res/layout/activity_show_details_user.xml
@@ -37,7 +37,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:src="@drawable/profile_pic"
+        android:src="@drawable/circle_shape"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
