--- a/app/src/main/res/layout/item_in_send_message.xml
+++ b/app/src/main/res/layout/item_in_send_message.xml
@@ -26,6 +26,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         android:layout_weight="1"
+        android:visibility="invisible"
         android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
