change causes to cases, improve select from gallery, show text if News feed empty and change donate to join

--- a/app/src/main/res/layout/activity_details_cause.xml
+++ b/app/src/main/res/layout/activity_details_cause.xml
@@ -179,7 +179,7 @@
         android:layout_height="@dimen/_50dp"
         android:layout_marginTop="@dimen/_16dp"
         android:background="@drawable/btn"
-        android:text="Donate"
+        android:text="Join"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_20sp"
