--- a/app/src/main/res/layout/content_add_cause.xml
+++ b/app/src/main/res/layout/content_add_cause.xml
@@ -102,7 +102,7 @@
             android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
-            android:hint="Name cause"
+            android:hint="Name case"
             android:inputType="textPersonName"
             android:textSize="@dimen/_20sp"
             android:textStyle="bold"
@@ -214,7 +214,7 @@
             android:layout_marginRight="@dimen/_8dp"
             android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_16dp"
-            android:hint="End date"
+            android:hint="Due Date"
             android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
