--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,7 +62,7 @@
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="My causes"
+        android:text="My cases"
         android:textSize="@dimen/_15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
