--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -175,7 +175,7 @@
         android:layout_height="@dimen/_50dp"
         android:layout_marginTop="@dimen/_16dp"
         android:background="@drawable/btn"
-        android:text="Donate"
+        android:text="Join"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_20sp"
